added harmonic sliders

--- a/web/hi.html
+++ b/web/hi.html
@@ -9,12 +9,24 @@
     
     <!-- import the click-counter -->
     <link rel="import" href="chart.html">
-    <script type="application/dart">export 'package:polymer/init.dart';</script>
     <script src="packages/browser/dart.js"></script>
+    <script type="application/dart" src="hi.dart"></script>
   </head>
   <body>
+
+    <h1>Harmonics</h1>    
+    <input id="s0" type="range" min="0" max="100" value="0" step="0.1"/><br>
+    <input id="s1" type="range" min="0" max="100" value="0" step="0.1"/><br>
+    <input id="s2" type="range" min="0" max="100" value="0" step="0.1"/><br>
+    <input id="s3" type="range" min="0" max="100" value="0" step="0.1"/><br>
+    <input id="s4" type="range" min="0" max="100" value="0" step="0.1"/><br>
+    <input id="s5" type="range" min="0" max="100" value="0" step="0.1"/><br>
+    <input id="s6" type="range" min="0" max="100" value="0" step="0.1"/><br>
+    <input id="s7" type="range" min="0" max="100" value="0" step="0.1"/><br>
+    <input id="s8" type="range" min="0" max="100" value="0" step="0.1"/><br>
+    <input id="s9" type="range" min="0" max="100" value="0" step="0.1"/><br>
+
     <h1>My Chart x3</h1>
-    
     <div>
       <my-chart></my-chart>
       <my-chart></my-chart>
