--- a/web/hi.html
+++ b/web/hi.html
@@ -14,7 +14,9 @@
   </head>
   <body>
 
-    <h1>Harmonics</h1>    
+    <h1>Timothy's collection of riddiculous stuff</h1>
+    
+    <h2>Harmonics</h2>    
     <input id="s0" type="range" min="0" max="100" value="0" step="0.1"/><br>
     <input id="s1" type="range" min="0" max="100" value="0" step="0.1"/><br>
     <input id="s2" type="range" min="0" max="100" value="0" step="0.1"/><br>
@@ -25,6 +27,8 @@
     <input id="s7" type="range" min="0" max="100" value="0" step="0.1"/><br>
     <input id="s8" type="range" min="0" max="100" value="0" step="0.1"/><br>
     <input id="s9" type="range" min="0" max="100" value="0" step="0.1"/><br>
+    <h3>Total</h3>
+    <input id="t" type="range" min="0" max="100" value="0" step="0.1"/><br>
 
     <h1>My Chart x3</h1>
     <div>
@@ -32,6 +36,8 @@
       <my-chart></my-chart>
       <my-chart></my-chart>
     </div>
+    
+    <iframe width="420" height="315" src="//www.youtube.com/embed/yVkdfJ9PkRQ" frameborder="0" allowfullscreen></iframe>
 
   </body>
 </html>
